fixed portfolio spacing

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1050,6 +1050,10 @@ svg {
 	.visible-mobile {
 		display: block !important;
 	}
+	.center {
+		text-align: center;
+		margin-top: 0px;
+	}
 }
 @media only screen and (max-width: 768px) {
 	.home-hero-intro {
